# dsp

./: .gitmodules  CMakeLists.txt
audio/: CMakeLists.txt
audio/include/audio/: audio.h  circular_buffer.h  engine.h  format.h  forwards.h  info.h  patch.h  patch_input.h  patch_mixer.h  patch_mixer_splitter.h  patch_output.h  patch_splitter.h  source.h  type_defs.h
audio/src/: library.cpp
dependencies/: CMakeLists.txt
dsp/: CMakeLists.txt
dsp/include/dsp/: chebyshev.h  coefficients.h  constants.h  convolution.h  dsp.h  fft.h  filter.h  pink_noise.h  recursive_filters.h  ring_buffer.h  sample_buffer.h  signal_buffer.h  util.h
dsp/include/dsp/filter/: filter.h
dsp/include/dsp/fourier/: series.h
dsp/src/: audio_test.h  fft.h  main.cpp  pink_noise.cpp
eval/: CMakeLists.txt
eval/clt/: CMakeLists.txt  main.cpp
eval/engine_eval/: CMakeLists.txt  main.cpp
eval/fft_pairs/: CMakeLists.txt  main.cpp
eval/filter_compare/: CMakeLists.txt  main.cpp
eval/kfr_eval/: CMakeLists.txt  main.cpp
eval/midi/: CMakeLists.txt  main.cpp  synthesizer.h  testio.cpp
eval/modulation/: CMakeLists.txt  helper.h  main.cpp
eval/moving_average_filter_demo/: CMakeLists.txt  main.cpp
eval/profiling/: CMakeLists.txt  main.cpp
eval/recursive_filters/: CMakeLists.txt  main.cpp
eval/signals/: CMakeLists.txt  main.cpp  wind_generator.h
eval/windowed_sinc_filter/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  main.cpp  pink_noise.cpp  pink_noise.h
